[project]
name = "meow"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas-stubs~=2.3.3",
    "pydantic>=2.12.5",
    "selenium>=4.39.0",
    "setuptools>=80.9.0",
    "streamlit==1.52.1",
    "undetected-chromedriver>=3.5.5",
]
